# streamlit-manim

./: README.md  packages.txt  pyproject.toml
src/: main.py
